--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -59,7 +59,8 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 == Additions
 {productname} 6.5 also includes the following additions:
 
-=== New `init_content_sync` option that initializes the editor iframe using `document.write` instead of `srcdoc`. #TINY-9818
+=== New `init_content_sync` option that initializes the editor iframe using `document.write` instead of `srcdoc`.
+//#TINY-9818
 
 In previous versions of {productname}, a toolbar flicker was identified when editor instances are re-initialized. 
 
