--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,6 +71,14 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== In some cases, the exiting a `blockquote` element could fail when the cursor was positioned at the end of the `blockquote`.
+//#TINY-9794
+
+In previous versions of {productname}, there was an issue with exiting a blockquote element when the cursor was at its end. This problem arose because when inserting a new block, the check to determine if the block is empty considered nodes with zero-width space (zwsp) as non-empty.
+
+Consequently, a block with only an empty format was mistakenly regarded as non-empty. To address this, the check has been updated to recognize (zwsp) as an empty block.
+
+As a result, blocks with empty formats in {productname} 6.5 are now correctly recognized as empty.
 
 [[security-fixes]]
 == Security fixes
