--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,21 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+=== Advanced Code Editor 3.3.0
+
+The {productname} 6.5 release includes an accompanying release of the **Advanced Code Editor** premium plugin.
+
+**Advanced Code Editor** 3.3.0 includes the following change.
+
+=== Advanced Code Editor did not preserve either the `font size` and `dark mode` save state when closed.
+//#TINY-9749
+
+In previous versions of {productname}, the `font size` and `dark mode` state within the Advanced Code Editor was not preserved after closing the dialog.
+
+As a consequence, when the user closed the Advanced Code Editor the editor would reset the state back to its default settings.
+
+In {productname} 6.5, the state for the `font size` and `dark mode` status is now preserved when the Advanced Code Editor is closed.
+
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
