--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,19 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+=== Advanced Templates 1.2.0
+
+The {productname} 6.5 release includes an accompanying release of the **Advanced Templates** premium plugin.
+
+**Advanced Templates** 1.2.0 includes the following fix.
+
+=== A selected item within its parent directory in tree components, would not retain as a highlighted selection after collapsing its directory.
+//#TINY-9715
+
+In previous versions of {productname}, selecting a leaf component within its parent directory would loose its state selection after collapsing and re-expanding the parent directory.
+
+A fix for this was implemented in {productname} 6.5, which now tracks the active state for a selected leaf component before and after collapsing or re-expanding the parent directory.
+
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
