--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -54,6 +54,14 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following improvements:
 
+=== Updated toolbar "More" button tooltip text from "More..." to "Reveal or hide additional toolbar items".
+//#TINY-9629
+
+In previous versions of {productname}, a bug was discovered when using screen reader, but in particular https://www.freedomscientific.com/products/software/jaws[JAWS], within {productname}. The ellipsis icon representing the "more" options did not have a meaningful explanation for screen readers.
+
+As a consequence, the screen reader would announce "More ellipsis" instead of providing a meaningful description that can be understood by users that rely on screen readers for accessibility.
+
+To fix this, {productname} 6.5 updated the text label for the "more" options to "Reveal or hide more toolbar items" which now provides clear description for users that rely on this feature.
 
 [[additions]]
 == Additions
