--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,6 +71,12 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== Fixed adding unnecessary space after a comma and before a quote in several scenarios.
+//#TINY-9510
+
+In previous versions of {productname}, the issue of adding an unnecessary space after a comma and before a quote in several scenarios was caused by an incorrectly written `regexp` rule in the typograf library for the Advanced Typography plugin. This led to the appearance of spaces between commas and quotes.
+
+To fix this, {productname}, updated the `regexp` in the typograf library. As a result, spaces between commas and quotes no longer appear.
 
 [[security-fixes]]
 == Security fixes
