--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,6 +71,12 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== Directionality commands was setting the `dir` attribute on `contenteditable= "false"` elements within a `contenteditable= "false"` root.
+//#TINY-9662
+
+In previous versions of {productname}, directionality commands applied the `dir` attribute to elements within a `contenteditable= "false"` root, which caused block elements that shouldn't be editable to be selected. 
+
+As a result, the `dir` attribute of these block elements would be updated with either `"ltr"` or `"rtl"` values. To address this issue, {productname} now checks if a element is set to `contenteditable= "false"` first, and if it is, the `dir` attribute is **not applied** to the selection.
 
 [[security-fixes]]
 == Security fixes
