--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,21 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+
+=== Advanced Templates 1.2.0
+
+The {productname} 6.5 release includes an accompanying release of the **Advanced Templates** premium plugin.
+
+**Advanced Templatess** 1.2.0 includes one improvement:
+
+=== The plugin's UI has been enhanced to provide controls only for a preconfigured set of operations.
+//#TINY-9756
+
+The latest update to the Advanced Templates plugin introduces an enhanced user interface (UI) that offers controls exclusively tailored for a predefined range of operations. This upgrade streamlines the user experience by presenting only the necessary options relevant to the specific tasks at hand.
+
+[NOTE]
+Read more about the enhanced user interface (UI) configuration for the `advtemplate_templates` option xref:ROOT:advtemplate_templates.adoc[here]
+
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
