--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -76,7 +76,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 In previous versions of {productname}, selecting content inside a `contenteditable="false"` section while having the casechange plugin active made it possible to apply the casechange features via the toolbar buttons and menu items.
 
-As a result in {productname} 6.5, the casechange toolbar button and menu items are will now be disabled when the selection is in `contenteditable="false"` section.
+As a result in {productname} 6.5, the casechange toolbar button and menu items will now be disabled when the selection is in `contenteditable="false"` section.
 
 [[security-fixes]]
 == Security fixes
