--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -45,6 +45,8 @@ As a consequence, when the user closed the Advanced Code Editor the editor would
 
 In {productname} 6.5, the state for the `font size` and `dark mode` status is now preserved when the Advanced Code Editor is closed.
 
+[NOTE]
+This issue only affected the Advanced Coded Editor when it was is in modal.
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
