--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,6 +71,14 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== Select would in some situations when it was reused or otherwise reset not have an initial selected value when expected to.
+//#TINY-9679
+
+In previous version of {productname}, the browser displayed difficulties while switching to a elements child, which lead to it defaulting to an empty state.
+
+To resolve this issue, element such as this can no longer be empty unless the user explicitly sets it as such.
+
+In {productname}, these elements will now have a populated value unless the user specifically chooses an empty selection.
 
 [[security-fixes]]
 == Security fixes
