--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,6 +71,12 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== Initializing the editor with a table at the start would display resize handles even when the editor wasn't focused.
+//#TINY-9748
+
+In previous versions of {productname}, resize handles would show up for tables in the editor even when they weren't focused. This happened because the cursor automatically landed in the table during the initialization process for the editor during startup.
+
+In {productname} 6.5, the resize handles have been adjusted to prevent their display when the caret is inside a table without the editor being focused.
 
 [[security-fixes]]
 == Security fixes
