--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -71,6 +71,14 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also includes the following bug fixes:
 
+=== On iOS Safari, Hangul (Korean) characters will no longer merge onto the previous line after inserting a newline by pressing Enter.
+//#TINY-9746
+
+In previous versions of {productname}, in iOS Safari, a bug has been fixed regarding the handling of Korean characters.
+
+Previously, when a newline was inserted by pressing the Enter key, Korean characters would merge onto the previous line instead of starting a new line. This occurred because iOS Safari composed Korean characters by deleting the previous partial character and inserting the composed character, continuing until the Enter key was pressed. Even though {productname} has its own Enter key handler, the native Enter key event was suppressed, causing the bug.
+
+{productname} 6.5, now saves a bookmark while adding an undo level when the caret is positioned after a Korean character and the Enter key is pressed. This allows the native Enter key event to fire and end the composition session. Then, on the keyup event, the effects of the Enter key (creating a newline) are undone, the original selection is restored, and {productname}'s Enter key handler is called. As a result, iOS Safari no longer attempts to compose Korean characters across newlines, resolving the issue.
 
 [[security-fixes]]
 == Security fixes
