--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -59,6 +59,17 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 == Additions
 {productname} 6.5 also includes the following additions:
 
+=== New `DataTransfer`, `DataTransferContent`, `DataTransferEvent`, and `DataTransferMode` APIs to handle creating and manipulating `DataTransfer` objects.
+//#TINY-9601
+
+Dragging and dropping `contenteditable="false"` elements within {productname} emits dragstart, drop, and dragend events as expected. However, in previous versions of {productname}, these drag events had their `dataTransfer` property set to null, whereas according to web standards it should be set to a `DataTransfer` object holding the drag operation's data.
+
+As a consequence, integrators were unable to view and manipulate the HTML drag data in these drag events.
+
+In {productname} 6.5, dragstart, drop, and dragend events now have their `dataTransfer` property populated with a `DataTransfer` object whose text/html data holds the outerHTML of the `contenteditable="false"` element being dragged. Additionally, a custom mode module has been implemented to ensure that the `DataTransfer` object is in read/write mode in dragstart, read-only mode in drop, and protected mode in dragend, as per standard.
+
+[NOTE]
+Integrators who wish to manipulate the HTML drag data should do so in the dragstart event using the `DataTransfer.setData` method.
 
 [[changes]]
 == Changes
