DOC-1984: Added TINY-9698 to the release notes.

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,21 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+=== Advanced Code Editor 3.3.0
+
+The {productname} 6.5 release includes an accompanying release of the **Advanced Code Editor** premium plugin.
+
+**Advanced Code Editor** 3.3.0 includes the following fix.
+
+=== The `copy code` button wasn't correctly styled within the Advanced Code Editor.
+//#TINY-9698
+
+In previous versions of {productname}, the "Copy code" button had a grey background.
+
+This issue was caused by the previous setting of `borderless: true` which should have been set to `false`. As a consequence, the button wasn't correctly styled. 
+
+In {productname} 6.5, the `borderless: true` setting has now been removed and the button is now correctly styled.
+
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
