DOC-1953: template.adoc
Copy edits to added IMPORTANT admonition.

--- a/modules/ROOT/pages/template.adoc
+++ b/modules/ROOT/pages/template.adoc
@@ -6,7 +6,7 @@
 :plugincode: template
 
 
-IMPORTANT: The Template plugin has been marked as *deprecated*. As a result, it will be completely removed from the upcoming TinyMCE 7.0 release. As an alternative solution, we highly recommend utilizing the xref:advanced-templates.adoc[Advanced Template] Premium plugin. 
+IMPORTANT: The Template plugin has been marked as *deprecated*. It will be completely removed from the upcoming {productname} 7.0 release. As an alternative solution, we recommend the xref:advanced-templates.adoc[Advanced Template] Premium plugin.
 
 The `+template+` plugin adds support for custom templates. It also adds a menu item `+Insert template+` under the `+Insert+` menu and a toolbar button.
 
