DOC-1953: advanced-templates.adoc
Removed ‘option’ from the anchor tag text.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -117,7 +117,7 @@ There are two approaches to using the Advanced Template Premium plugin: fixed te
 
 === Fixed template lists
 
-For users who work with a fixed template list that does not require modification, you can provide a list directly through the {productname} init configuration using the xref:advtemplate_templates[`+advtemplate_templates+` option].
+For users who work with a fixed template list that does not require modification, you can provide a list directly through the {productname} init configuration using the xref:advtemplate_templates[`+advtemplate_templates+`] option.
 
 The following interactive predefined list example provides guidance for this approach.
 
